--- a/snow-web/pom.xml
+++ b/snow-web/pom.xml
@@ -104,6 +104,12 @@
             <version>2.2.2</version>
         </dependency>
 
+        <!-- ehcache 缓存 -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
