--- a/snow-visual/package.json
+++ b/snow-visual/package.json
@@ -2,16 +2,24 @@
   "name": "snow-visual",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "qingt8711 <qingt8711@163.com>",
+  "author": "qingtian",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "cropper": "^3.0.0-rc.3",
+    "expose-loader": "^0.7.3",
+    "jquery": "^3.2.1",
+    "style-loader": "^0.18.2",
+    "url": "^0.11.0",
+    "url-loader": "^0.5.9",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
